BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Address_Coordinates_vod__c.object
<CustomObject>
    <description>This object stores geographic coordinates for addresses</description>
    <fields>
        <fullName>Address_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Address to which the coordinates are associated</description>
        <label>Address</label>
        <referenceTo>Address_vod__c</referenceTo>
        <relationshipLabel>Address Coordinates</relationshipLabel>
        <relationshipName>Address_Coordinates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GeoCode_Fail_vod__c</fullName>
        <description>Indicates that the address could not be geocoded</description>
        <label>GeoCode Fail</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_GeoCode_Date_vod__c</fullName>
        <description>Date/Time of when the address was last geocoded</description>
        <label>Last GeoCode Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latitude_vod__c</fullName>
        <description>Latitude value of the address</description>
        <label>Latitude</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude_vod__c</fullName>
        <description>Longitude value of the address</description>
        <label>Longitude</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Detail_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User Detail to which the coordinates are associated</description>
        <label>User Detail</label>
        <referenceTo>User_Detail_vod__c</referenceTo>
        <relationshipLabel>Address Coordinates</relationshipLabel>
        <relationshipName>Address_Coordinates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Address Coordinates</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Address Coordinates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Address Coordinates</pluralLabel>
    <recordTypes>
        <fullName>iOS_vod</fullName>
        <active>true</active>
        <description>Coordinates fetched by iOS</description>
        <label>iOS</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>